package ca.etsmtl.leakageanalysisplugin.models.leakage;

public enum AnalysisStatus {
    SUCCESS,
    FAILED
}
